[package]
name = "backend"
version = "0.1.0"
authors = ["AlexandreBiguet <alexandre.biguet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = {version = "0.3.0" }
serde = {version = "1.0.130"}